# wayfinder

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.devtest  Dockerfile.web  README.md  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml  restart.sh  validate.sh
.claude/commands/: doc-review.md  e2e-cc-web.md  e2e.md
.github/workflows/: e2e.yml  provision-environment.yml
apps/web/: .eslintrc.a11y.cjs  .eslintrc.cjs  next.config.ts  package.json  tailwind.config.ts
docs/: features.md
docs/development/: scaling-to-concurrent-load.md
docs/guides/: accessibility.md  scaling-and-concurrency.md
infra/aws/: .gitignore  README.md  backend.hcl.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
services/semchunk/: Dockerfile  README.md  app.py  pyproject.toml  test_app.py
tests/e2e/: admin-dashboards.spec.ts  admin-flow-editing.spec.ts  auth-username-password.spec.ts  cleanup.teardown.ts  enhance-auth-route-consolidation.spec.ts  enhance-n8n-workflow-context-mapping.spec.ts  enhance-node-config-improvements.spec.ts  enhance-rag-node-config-chat-ui.spec.ts  enhance-repeating-group-editing.spec.ts  enhance-skill-picker-and-flow-settings.spec.ts  fix-logout-and-register-sidebar.spec.ts  fix-prior-step-fields-stripped.spec.ts  flow-lifecycle.spec.ts  flows.spec.ts  package.json  phase-mcp-flow-consumption.spec.ts  phase-mcp-integration.spec.ts  phase-rag-with-pgvector.spec.ts  phase-scheduling.spec.ts  playwright.config.ts  seed.setup.ts
(+265 files in other folders)
