[project]
name = "wayfinder-semchunk-sidecar"
version = "1.57.0"
description = "Semantic chunking sidecar for Wayfinder (ADR-030)"
requires-python = ">=3.11"
dependencies = [
    "semchunk>=4.1,<5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["."]
